--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-     background: linear-gradient(to right, #FF0000, #D32F2F);
+    background: linear-gradient(to right, #1F1C18, #8E0E00);
     color: white;
     padding: 50px;
 }
