--- a/html/styles/admin-panel.css
+++ b/html/styles/admin-panel.css
@@ -21,7 +21,6 @@ h1 {
 
 .card {
    padding: 20px 0px;
-   ;
    font-size: 25px;
    background-color: black;
    color: white;
@@ -30,7 +29,11 @@ h1 {
    justify-content: center;
 }
 
-#card-content {
+.card>span {
+   cursor: pointer;
+}
+
+.card-content {
    background-color: grey;
    height: 730px;
    /* change height as per content */
@@ -38,18 +41,18 @@ h1 {
    border-radius: 0px 0px 20px 20px;
 }
 
-#card-content>h1 {
+.card-content>h1 {
    font-size: 25x;
    background-color: rgb(31, 30, 30);
 }
 
-#card-content>h2 {
+.card-content>h2 {
    font-size: 25px;
    display: block;
    text-align: center;
 }
 
-#event-content {
+.event-content {
    padding: 0px 50px;
    gap: 20px;
    /* border: 3px solid black; */
@@ -57,7 +60,7 @@ h1 {
    grid-template-columns: 2fr 4fr;
 }
 
-#event-name {
+.event-name {
    padding: 20px;
    font-size: 1.5rem;
    border: 2px solid rgb(78, 78, 78);
@@ -65,7 +68,7 @@ h1 {
    height: 400px;
 }
 
-#event-detail {
+.event-detail {
    padding: 20px;
    font-size: 1.5rem;
    border: 2px solid rgb(78, 78, 78);
