--- a/html/styles/games-page.css
+++ b/html/styles/games-page.css
@@ -9,12 +9,12 @@ body {
 
 #page-content {
    display: grid;
-   grid-template-columns:1fr 5fr 1fr;
+   grid-template-columns: 1fr 5fr 1fr;
    gap: 20px;
 }
 
-#container{
- padding: 10px;
+#container {
+   padding: 10px;
 }
 
 #games-type {
@@ -22,11 +22,11 @@ body {
    grid-template-columns: 1fr 9fr;
 }
 
-.game{
+.game {
    cursor: pointer;
 }
 
-.game.active{
+.game.active {
    background-color: #e492922a;
 }
 
@@ -67,13 +67,13 @@ body {
 .card {
    display: grid;
    grid-template-rows: 2fr 1fr;
-   width: 280px;
+   width: 300px;
    border: 1px solid #000000;
    border-radius: 15px;
    box-shadow: 4px 4px 2.5px 1px;
    gap: 8px;
    padding: 5px;
-   height: 350px;
+   height: 450px;
    background-color: #e492922a;
 }
 
@@ -117,6 +117,7 @@ body {
    background: none;
    font-size: 25px;
    cursor: pointer;
+   padding: 8px 12px;
 }
 
 
