--- a/chatbot.css
+++ b/chatbot.css
@@ -1,72 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
-    * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    }
+}
 
-    :root {
-    --text-color: #E3E3E3;
+:root {
+    --text-color: #ffffff;
     --subheading-color: #828282;
     --placeholder-color: #A6A6A6;
-    --primary-color: #dfb6b2;
-    --secondary-color: #522b5b;
-    --secondary-hover-color: #444;
-    }
+    --primary-color: #244d61;
+    --secondary-color: 0000;
+    --secondary-hover-color: #1a37469d;
+}
 
-    .light_mode {
+.light_mode {
     --text-color: #222;
     --subheading-color: #A0A0A0;
     --placeholder-color: #6C6C6C;
     --primary-color: #FFF;
     --secondary-color: #E9EEF6;
     --secondary-hover-color: #DBE1EA;
-    }
+}
 
-    body {
+body {
     background: var(--primary-color);
-    }
+}
 
-    .header, .chat-list .message, .typing-form {
+.header,
+.chat-list .message,
+.typing-form {
     margin: 0 auto;
     max-width: 980px;
-    }
+}
 
-    .header {
+.header {
     margin-top: 6vh;
     padding: 1rem;
     overflow-x: hidden;
-    }
+}
 
-    body.hide-header .header {
+body.hide-header .header {
     margin: 0;
     display: none;
-    }
+}
 
-    .header :where(.title, .subtitle) {
+.header :where(.title, .subtitle) {
     color: var(--text-color);
     font-weight: 500;
     line-height: 4rem;
-    }
+}
 
-    .header .title {
+.header .title {
     width: fit-content;
     font-size: 3rem;
     background-clip: text;
-    background: linear-gradient(to right, #4285f4, #d96570);
+    background: linear-gradient(to right, #5761B2, #1FC5A8);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    }
+}
 
-    .header .subtitle {
+.header .subtitle {
     font-size: 2.6rem;
     color: var(--subheading-color);
-    }
+}
 
-    .suggestion-list {
+.suggestion-list {
     width: 100%;
     list-style: none;
     display: flex;
@@ -76,9 +77,9 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
-    }
+}
 
-    .suggestion-list .suggestion {
+.suggestion-list .suggestion {
     cursor: pointer;
     padding: 1.25rem;
     width: 222px;
@@ -90,18 +91,19 @@
     justify-content: space-between;
     background: var(--secondary-color);
     transition: 0.2s ease;
-    }
+    border: 1px #b3c1c8 solid;
+}
 
-    .suggestion-list .suggestion:hover {
+.suggestion-list .suggestion:hover {
     background: var(--secondary-hover-color);
-    }
+}
 
-    .suggestion-list .suggestion :where(.text, .icon) {
+.suggestion-list .suggestion :where(.text, .icon) {
     font-weight: 400;
     color: var(--text-color);
-    }
+}
 
-    .suggestion-list .suggestion .icon {
+.suggestion-list .suggestion .icon {
     width: 42px;
     height: 42px;
     display: flex;
@@ -109,62 +111,64 @@
     margin-top: 2.5rem;
     align-self: flex-end;
     align-items: center;
+    border: 1px #b3c1c8 solid;
     border-radius: 50%;
     justify-content: center;
     color: var(--text-color);
     background: var(--primary-color);
-    }
+}
 
-    .chat-list {
+.chat-list {
     padding: 2rem 1rem 12rem;
     max-height: 100vh;
     overflow-y: auto;
     scrollbar-color: #999 transparent;
-    }
+}
 
-    .chat-list .message.incoming {
+.chat-list .message.incoming {
     margin-top: 1.5rem;
-    }
+}
 
-    .chat-list .message .message-content {
+.chat-list .message .message-content {
     display: flex;
     gap: 1.5rem;
     width: 100%;
     align-items: center;
-    }
+}
 
-    .chat-list .message .text {
+
+.chat-list .message .text {
     color: var(--text-color);
     white-space: pre-wrap;
-    }
+}
 
-    .chat-list .message.error .text {
+.chat-list .message.error .text {
     color: #e55865;
-    }
+}
 
-    .chat-list .message.loading .text {
+.chat-list .message.loading .text {
     display: none;
-    }
+}
 
-    .chat-list .message .avatar {
+.chat-list .message .avatar {
     width: 40px;
     height: 40px;
     object-fit: cover;
     border-radius: 50%;
     align-self: flex-start;
-    }
+}
 
-    .chat-list .message.loading .avatar {
+.chat-list .message.loading .avatar {
     animation: rotate 3s linear infinite;
-    }
+}
 
-    @keyframes rotate {
+@keyframes rotate {
     100% {
-    transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-    }
+}
 
-    .chat-list .message .icon {
+.chat-list .message .icon {
     color: var(--text-color);
     cursor: pointer;
     height: 35px;
@@ -177,79 +181,79 @@
     font-size: 1.25rem;
     margin-left: 3.5rem;
     visibility: hidden;
-    }
+}
 
-    .chat-list .message .icon.hide {
+.chat-list .message .icon.hide {
     visibility: hidden;
-    }
+}
 
-    .chat-list .message:not(.loading, .error):hover .icon:not(.hide){
+.chat-list .message:not(.loading, .error):hover .icon:not(.hide) {
     visibility: visible;
-    }
+}
 
-    .chat-list .message .icon:hover {
+.chat-list .message .icon:hover {
     background: var(--secondary-hover-color);
-    }
+}
 
-    .chat-list .message .loading-indicator {
+.chat-list .message .loading-indicator {
     display: none;
     gap: 0.8rem;
     width: 100%;
     flex-direction: column;
-    }
+}
 
-    .chat-list .message.loading .loading-indicator {
+.chat-list .message.loading .loading-indicator {
     display: flex;
-    }
+}
 
-    .chat-list .message .loading-indicator .loading-bar {
+.chat-list .message .loading-indicator .loading-bar {
     height: 11px;
     width: 100%;
     border-radius: 0.135rem;
     background-position: -800px 0;
     background: linear-gradient(to right, #4285f4, var(--primary-color), #4285f4);
     animation: loading 3s linear infinite;
-    }
+}
 
-    .chat-list .message .loading-indicator .loading-bar:last-child {
+.chat-list .message .loading-indicator .loading-bar:last-child {
     width: 70%;
-    }
+}
 
-    @keyframes loading {
+@keyframes loading {
     0% {
-    background-position: -800px 0;
+        background-position: -800px 0;
     }
 
     100% {
-    background-position: 800px 0;
+        background-position: 800px 0;
     }
-    }
+}
 
-    .typing-area {
+.typing-area {
     position: fixed;
     width: 100%;
     left: 0;
     bottom: 0;
-    padding: 1rem;
+    padding: 1rem 0rem 5rem;
     background: var(--primary-color);
-    }
+}
 
-    .typing-area :where(.typing-form, .action-buttons) {
+.typing-area :where(.typing-form, .action-buttons) {
     display: flex;
     gap: 0.75rem;
-    }
+}
 
-    .typing-form .input-wrapper {
+.typing-form .input-wrapper {
     width: 100%;
     height: 56px;
     display: flex;
     position: relative;
-    }
+}
 
-    .typing-form .typing-input {
+.typing-form .typing-input {
     height: 100%;
     width: 100%;
-    border: none;
+    border: 1px solid;
     outline: none;
     resize: none;
     font-size: 1rem;
@@ -257,17 +261,17 @@
     padding: 1.1rem 4rem 1.1rem 1.5rem;
     border-radius: 100px;
     background: var(--secondary-color);
-    }
+}
 
-    .typing-form .typing-input:focus {
+.typing-form .typing-input:focus {
     background: var(--secondary-hover-color);
-    }
+}
 
-    .typing-form .typing-input::placeholder {
+.typing-form .typing-input::placeholder {
     color: var(--placeholder-color);
-    }
+}
 
-    .typing-area .icon {
+.typing-area .icon {
     width: 56px;
     height: 56px;
     flex-shrink: 0;
@@ -280,13 +284,13 @@
     justify-content: center;
     background: var(--secondary-color);
     transition: 0.2s ease;
-    }
+}
 
-    .typing-area .icon:hover {
+.typing-area .icon:hover {
     background: var(--secondary-hover-color);
-    }
+}
 
-    .typing-form #send-message-button {
+.typing-form #send-message-button {
     position: absolute;
     right: 0;
     outline: none;
@@ -294,48 +298,53 @@
     transform: scale(0);
     background: transparent;
     transition: transform 0.2s ease;
-    }
+}
 
-    .typing-form .typing-input:valid ~ #send-message-button {
+.typing-form .typing-input:valid~#send-message-button {
     transform: scale(1);
-    }
+}
 
-    .typing-area .disclaimer-text {
+.typing-area .disclaimer-text {
     text-align: center;
     font-size: 0.85rem;
     margin-top: 1rem;
     color: var(--placeholder-color);
-    }
+}
 
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
     .header :is(.title, .subtitle) {
-    font-size: 2rem;
-    line-height: 2.6rem;
+        font-size: 2rem;
+        line-height: 2.6rem;
     }
 
     .header .subtitle {
-    font-size: 1.7rem;
+        font-size: 1.7rem;
     }
 
     .typing-area :where(.typing-form, .action-buttons) {
-    gap: 0.4rem;
+        gap: 0.4rem;
     }
 
     .typing-form .input-wrapper {
-    height: 50px;
+        height: 50px;
     }
 
     .typing-form .typing-input {
-    padding: 1.1rem 3.5rem 1.1rem 1.2rem;
+        padding: 1.1rem 3.5rem 1.1rem 1.2rem;
     }
 
     .typing-area .icon {
-    height: 50px;
-    width: 50px;
+        height: 50px;
+        width: 50px;
     }
 
     .typing-area .disclaimer-text {
-    font-size: 0.75rem;
-    margin-top: 0.5rem;
+        font-size: 0.75rem;
+        margin-top: 0.5rem;
     }
-    }
+}
+
+
+.action-buttons>span {
+    border: 1px solid;
+}
